# mumerge

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  mumerge.py  mumerge_test_unit.py  mumerge_unittest.py  old_MANIFEST.in  pypi_upload.sh  pyproject.toml  setup.cfg  setup.py
mumerge/: __init__.py  __main__.py  _version.py  mumerge.py
mumerge/demo/: a.bed  b.bed  mumerge_demo.input
mumerge/sim/: __init__.py
mumerge/test/: __init__.py  mumerge_unittest.py
