[metadata]
name = mumerge
version = 0.1.0
author = Jacob T. Stanley
author_email = jtstan@gmail.com
description = A tool for probabilistically combinging overlapping bed regions from multiple bedfiles
long_description_content_type = text/markdown
url = https://github.com/Dowell-Lab/mumerge
classifiers = 
    Programming Language :: Python 3
    License :: MIT License
    Operating System :: OS Independant

[options]
# This searches through all py files to see what's being imported
package = find:
python_requirements = >=3.7
# Needed to include non-code files in your project (I'll need it for test data)
include_package_data = True
